<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inclass02.poorna.com.inclass08.NameEdit">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editinformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Information"
            android:textAlignment="center"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/name_edit"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email_edit"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="40dp"
            android:text="@string/department"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/department"
            android:layout_alignStart="@+id/department"
            android:layout_below="@+id/department"
            android:layout_marginTop="38dp">

            <RadioButton
                android:id="@+id/sis_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/sis_edit" />

            <RadioButton
                android:id="@+id/cs_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cs_edit" />

            <RadioButton
                android:id="@+id/bio_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bio_edit" />

            <RadioButton
                android:id="@+id/others_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/others_edit" />
        </RadioGroup>

        <TextView
            android:id="@+id/current_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mood_edit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="14dp"
            android:text="@string/current_mood"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/mood_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/submitchange"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="11dp" />

        <Button
            android:id="@+id/submit_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/submit_edit" />
    </LinearLayout>
</FrameLayout>
